clusters/titania/apps/tools/ittools/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ittools
    app.kubernetes.io/name: ittools
  name: ittools
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: ittools
      app.kubernetes.io/name: ittools
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ittools
        app.kubernetes.io/name: ittools
    spec:
      containers:
      - image: ghcr.io/corentinth/it-tools:2024.10.22-7ca5933
        imagePullPolicy: IfNotPresent
        name: ittools
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
