clusters/titania/apps/tools/ittools/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: ittools
    app.kubernetes.io/name: ittools
    app.kubernetes.io/service: ittools
  name: ittools
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: ittools
    app.kubernetes.io/name: ittools
  type: ClusterIP
