clusters/titania/apps/tools/ittools/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: ittools
    app.kubernetes.io/name: ittools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ittools-ingress
spec:
  tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
  rules:
  - host: ittools.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ittools
            port:
              name: http
